apps/dev/stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - name: stirling-pdf
          image: stirlingtools/stirling-pdf:2.14.3-fat
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: configs
              mountPath: /configs
            - name: settings
              mountPath: /configs/custom_settings.yml
              subPath: custom_settings.yml
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/v1/info/status
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /api/v1/info/status
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 2Gi
      volumes:
        - name: configs
          emptyDir: {}
        - name: settings
          configMap:
            name: stirling-pdf-settings
