apps/dev/stirling-pdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stirling-pdf-upload
  namespace: stirling-pdf
spec:
  buffering:
    maxRequestBodyBytes: 2147483648
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirling-pdf.stadthagen.dev`)
      kind: Rule
      middlewares:
        - name: stirling-pdf-upload
      services:
        - name: stirling-pdf
          port: 8080
  tls:
    secretName: stirling-pdf-tls
